@@ -1,5 +1,7 @@
 Revision history for Data::Validation
 
+         - Added field comparisson
+
 0.3.     14/06/2009
          - Added more tests
 
